# audio-book

./: .env.example  .gitignore  README.md  docker-compose.yml  start.sh
.claude/: settings.local.json
backend/: .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt
backend/app/api/: __init__.py
backend/app/api/endpoints/: audio.py  epub.py  translation.py  tts.py
backend/app/core/: config.py
backend/app/models/: schemas.py
backend/app/services/: audio_service.py  epub_service.py  translation_service.py  tts_service.py
f5tts-service/: Dockerfile  README.md  app.py  build.sh  run.sh
frontend/: Dockerfile  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  index.tsx
frontend/src/components/: AudioPlayer.tsx  BookLibrary.tsx  BookReader.tsx  BookUpload.tsx  ChapterList.tsx  Header.tsx  HomePage.tsx  TextDisplay.tsx  TranslationProgress.tsx
frontend/src/services/: api.ts
frontend/src/store/: bookStore.ts
frontend/src/types/: book.ts
storage/audio/: .gitkeep
storage/translations/: .gitkeep
storage/uploads/: .gitkeep
